log
Thu Apr 21 11:28:55 HSP 2022: 
 tests:  1|8
total_score: 0/70
f7e0312
Thu Apr 21 11:39:16 HSP 2022: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  8|7
total_score: 10/70
f9713d8
Thu Apr 21 11:39:42 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
e00909d
Thu Apr 21 11:45:40 HSP 2022: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
a678b77
Thu Apr 21 11:50:12 HSP 2022: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  10|6
total_score: 15/70
e599b49
Thu Apr 21 11:50:45 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
38fe800
Thu Apr 21 11:51:28 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dd707af
Thu Apr 21 12:00:07 HSP 2022: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  12|6
total_score: 15/70
5de9bd5
Thu Apr 21 12:03:43 HSP 2022: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  12|6
total_score: 15/70
02fbd76
Thu Apr 21 12:06:41 HSP 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
aa65e33
Thu Apr 21 12:07:12 HSP 2022: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  13|5
total_score: 25/70
b1c7c48
Thu Apr 21 12:08:08 HSP 2022: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
352df3f
Thu Apr 21 12:10:16 HSP 2022: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
53cd562
Fri Apr 22 20:03:01 HSP 2022: 
 treemap.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
In file included from test.c:4:0:
treemap.c:103:5: error: data definition has no type or storage class [-Werror]
     free(node);
     ^~~~
treemap.c:103:5: error: type defaults to 'int' in declaration of 'free' [-Werror=implicit-int]
treemap.c:103:5: error: parameter names (without types) in function declaration [-Werror]
treemap.c:103:5: error: conflicting types for 'free'
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:487:39: note: previous declaration of 'free' was here
 _CRTIMP __cdecl __MINGW_NOTHROW  void free (void *);
                                       ^~~~
In file included from test.c:4:0:
treemap.c:104:1: error: expected identifier or '(' before '}' token
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
b338201
Sun Apr 24 00:23:38 HSP 2022: 
 treemap.c | 32 ++++++--------------------------
 1 file changed, 6 insertions(+), 26 deletions(-)
 tests:  16|4
total_score: 30/70
4632a8e
Sun Apr 24 00:37:39 HSP 2022: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  0|0
c31608f
Sun Apr 24 00:42:26 HSP 2022: 
 treemap.c | 16 ----------------
 1 file changed, 16 deletions(-)
 tests:  16|4
total_score: 30/70
8c2bebd
Sun Apr 24 00:45:58 HSP 2022: 
 treemap.c | 21 ++++++++++++++++-----
 1 file changed, 16 insertions(+), 5 deletions(-)
 tests:  0|0
292b619
Sun Apr 24 00:50:02 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
27cf42a
Sun Apr 24 00:51:36 HSP 2022: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
659624a
Sun Apr 24 00:53:08 HSP 2022: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
08a443e
Sun Apr 24 00:54:00 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
55ef2d4
Sun Apr 24 00:54:29 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
3cf6a06
Sun Apr 24 00:55:36 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b3601fd
